Update: Added shared module, improved Maven project configuration, improved Terraform IaC files